add productsSection class

--- a/index.html
+++ b/index.html
@@ -308,7 +308,7 @@
       </div>
     </section>
 
-    <section id="products" class="selectProducts">
+    <section id="products" class="productsSection">
       <div class="productButtons">
         <h1>Products</h1>
         <div class="selectProductButtons">
