links in the footer to products

--- a/index.html
+++ b/index.html
@@ -382,10 +382,26 @@
         <div class="footerMenu">
           <h1 class="fMenuTitle">Products</h1>
           <ul class="fList">
-            <li class="fListItem">FamilyArt</li>
-            <li class="fListItem">Butterfly Art</li>
-            <li class="fListItem">Heart Art</li>
-            <li class="fListItem">Wind Chime</li>
+            <li class="fListItem">
+              <a href="#" class="footerProductLink" data-product="0"
+                >Family Art</a
+              >
+            </li>
+            <li class="fListItem">
+              <a href="#" class="footerProductLink" data-product="1"
+                >Butterfly Art</a
+              >
+            </li>
+            <li class="fListItem">
+              <a href="#" class="footerProductLink" data-product="2"
+                >Heart Art</a
+              >
+            </li>
+            <li class="fListItem">
+              <a href="#" class="footerProductLink" data-product="3"
+                >Wind Chime</a
+              >
+            </li>
           </ul>
         </div>
       </div>
